# phi

./: .gitignore  Cargo.toml
src/: main.rs  structs.rs  util.rs
src/modules/: inactivity.rs  mod.rs
src/plugins/bukkit/: plugin.rs
src/servers/: mod.rs
src/servers/bukkit/: bukkit.rs  mod.rs
src/servers/bukkit/entity/: player.rs
src/servers/bukkit/plugin/: plugin.rs
src/servers/fabric/: main.rs  mod.rs
src/servers/fabric/entity/: player.rs
src/servers/forge/: main.rs
src/util/: jar_util.rs  misc.rs  mod.rs  server_type.rs
