[package]
name = "phi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
jni = { version = "0.21.1", features = ["invocation"] }
tokio = { version = "1.24.1", features = ["time", "macros", "rt-multi-thread"] }
once_cell = "1.17.0"
zip = "0.6.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
graceful = "0.1.1"